[gd_scene load_steps=16 format=3 uid="uid://r1ntcqdujfol"]

[ext_resource type="Script" uid="uid://j84s4qlkmfxw" path="res://addons/diisis/templates/visual_novel/stages/game_stage.gd" id="1_a36me"]
[ext_resource type="Script" uid="uid://dycysb8joq17f" path="res://addons/diisis/parser/src/resources/line_reader_actor_config.gd" id="3_aqeli"]
[ext_resource type="Script" uid="uid://bqw08o3b22fdc" path="res://addons/diisis/templates/visual_novel/stages/line_reader_custom.gd" id="3_pms35"]
[ext_resource type="Script" uid="uid://brouc1vl1o5us" path="res://addons/diisis/templates/visual_novel/stages/objects.gd" id="3_x2eff"]
[ext_resource type="PackedScene" uid="uid://chfbyvpvah4eu" path="res://addons/diisis/templates/visual_novel/characters/character.tscn" id="5_aqeli"]
[ext_resource type="Theme" uid="uid://drk5fhsdjoewf" path="res://addons/diisis/templates/visual_novel/visuals/theme/diisis_theme.tres" id="6_e6caa"]
[ext_resource type="PackedScene" uid="uid://qkegdwc8ux5o" path="res://addons/diisis/templates/visual_novel/stages/black_fade.tscn" id="8_50byo"]
[ext_resource type="Script" uid="uid://c2vvnjn4tl6a7" path="res://addons/diisis/templates/visual_novel/stages/game_camera.gd" id="9_lbjue"]
[ext_resource type="PackedScene" uid="uid://cg68f27bymn00" path="res://addons/diisis/templates/visual_novel/stages/rolling_credits.tscn" id="11_o4gqq"]
[ext_resource type="PackedScene" uid="uid://cjy7vf1xrnq5y" path="res://addons/diisis/templates/visual_novel/screens/chapter_cover.tscn" id="12_vf2y4"]
[ext_resource type="PackedScene" uid="uid://biu88w163ploy" path="res://addons/diisis/templates/visual_novel/systems/cheats.tscn" id="13_qackq"]
[ext_resource type="Script" uid="uid://byyv78vc44g4u" path="res://addons/diisis/templates/visual_novel/stages/start_cover.gd" id="13_qfsh6"]

[sub_resource type="Resource" id="Resource_knhaa"]
script = ExtResource("3_aqeli")
name_display = "Amber"
name_prefix = ""
name_suffix = ""
color = Color(0.952064, 0.505677, 0.95243, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
chatlog_name_display = ""
chatlog_color = Color(1, 1, 1, 0)
chatlog_outline_color = Color(1, 1, 1, 1)
chatlog_outline_size = 0
body_label_prefix = ""
body_label_suffix = ""
metadata/_custom_type_script = "uid://dycysb8joq17f"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4gqq"]
bg_color = Color(0.0509804, 0.0509804, 0.0509804, 0.756863)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_awxun"]

[node name="GameStage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 2
script = ExtResource("1_a36me")

[node name="LineReader" type="Node" parent="." node_paths=PackedStringArray("name_label", "body_label", "text_container", "name_container", "choice_title_label", "choice_container", "choice_list")]
unique_name_in_owner = true
script = ExtResource("3_pms35")
auto_pause_duration = 0.4
show_text_during_text = null
actor_config = Dictionary[String, ExtResource("3_aqeli")]({
"amber": SubResource("Resource_knhaa")
})
blank_names = Array[String](["narrator"])
name_label = NodePath("Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer/HBoxContainer/NameContainer/PanelContainer/NameLabel")
body_label = NodePath("Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer/HBoxContainer/PanelContainer/VBoxContainer/BodyLabel")
text_container = NodePath("Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer")
name_container = NodePath("Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer/HBoxContainer/NameContainer")
choice_title_label = NodePath("Camera2D/VNUICanvasLayer/VNUIRoot/ChoicePanel/VBoxContainer/ChoiceLabel")
choice_container = NodePath("Camera2D/VNUICanvasLayer/VNUIRoot/ChoicePanel")
choice_list = NodePath("Camera2D/VNUICanvasLayer/VNUIRoot/ChoicePanel/VBoxContainer/ChoiceList")
chatlog_fuse_lines = false
input_prompt_delay = 1.29
input_prompt_lerp_weight = 0.233
inline_name_separator = "~"
warn_on_non_bool_function_return = false

[node name="Background" type="Node2D" parent="LineReader"]
unique_name_in_owner = true
position = Vector2(76, -51)

[node name="Sprite2D" type="Sprite2D" parent="LineReader/Background"]
position = Vector2(493, 334)

[node name="Objects" type="Node2D" parent="LineReader"]
unique_name_in_owner = true
script = ExtResource("3_x2eff")

[node name="Characters" type="Node2D" parent="LineReader"]

[node name="Amber" parent="LineReader/Characters" instance=ExtResource("5_aqeli")]
position = Vector2(574, 366)
character_name = "amber"

[node name="Camera2D" type="Camera2D" parent="LineReader"]
unique_name_in_owner = true
position = Vector2(576, 324)
script = ExtResource("9_lbjue")

[node name="VFX" type="CanvasLayer" parent="LineReader/Camera2D"]

[node name="VFXLayer" type="Node2D" parent="LineReader/Camera2D/VFX"]

[node name="VNUICanvasLayer" type="CanvasLayer" parent="LineReader/Camera2D"]

[node name="VNUIRoot" type="Control" parent="LineReader/Camera2D/VNUICanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("6_e6caa")

[node name="Control" type="Control" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CGBottomContainer" type="ColorRect" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/Control"]
auto_translate_mode = 1
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="VNUI" type="Control" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AndroidHackButton" type="Button" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "sdfgdg"

[node name="DefaultTextContainer" type="MarginContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.5
offset_top = -202.0
offset_right = 350.5
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 20

[node name="HBoxContainer" type="VBoxContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer"]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
alignment = 2

[node name="NameContainer" type="MarginContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 1

[node name="PanelContainer" type="PanelContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer/HBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="NameLabel" type="Label" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer/HBoxContainer/NameContainer/PanelContainer"]
layout_mode = 2
text = "Name Label"

[node name="PanelContainer" type="PanelContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 81)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_type_variation = &"DefaultText"

[node name="VBoxContainer" type="VBoxContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="BodyLabel" type="RichTextLabel" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer/HBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(670, 121)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 1
bbcode_enabled = true
text = "Body Label"
fit_content = true
scroll_active = false

[node name="ControlsContainer" type="VBoxContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -58.0
offset_top = -44.0
offset_right = -10.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0

[node name="HistoryButton" type="Button" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/ControlsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"GameControlsButton"
text = "History"

[node name="MenuButton" type="Button" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/ControlsContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_type_variation = &"GameControlsButton"
text = "Menu"

[node name="ChoicePanel" type="PanelContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o4gqq")

[node name="VBoxContainer" type="VBoxContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/ChoicePanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ChoiceLabel" type="Label" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/ChoicePanel/VBoxContainer"]
layout_mode = 2

[node name="ChoiceList" type="VBoxContainer" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/ChoicePanel/VBoxContainer"]
layout_mode = 2

[node name="CGTopContainer" type="Control" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ChapterCover" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot" instance=ExtResource("12_vf2y4")]
visible = false
layout_mode = 1

[node name="Cheats" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot" instance=ExtResource("13_qackq")]
visible = false
layout_mode = 1

[node name="ScreenContainer" type="Control" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DevModeLabel" type="Label" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.5
offset_right = 82.5
offset_bottom = 23.0
grow_horizontal = 2
text = "DEV MODE ENABLED"

[node name="StartCover" type="ColorRect" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
script = ExtResource("13_qfsh6")

[node name="RollingCredits" parent="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot" instance=ExtResource("11_o4gqq")]
layout_mode = 1

[node name="BlackLayer" type="CanvasLayer" parent="LineReader/Camera2D"]

[node name="BlackFade" parent="LineReader/Camera2D/BlackLayer" instance=ExtResource("8_50byo")]
visible = false
z_index = 10

[node name="CreditsLayer" type="CanvasLayer" parent="LineReader/Camera2D"]
visible = false

[node name="ColorRect" type="ColorRect" parent="LineReader/Camera2D/CreditsLayer"]
material = SubResource("ShaderMaterial_awxun")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/AndroidHackButton" to="." method="_on_android_hack_button_pressed"]
[connection signal="meta_clicked" from="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer/HBoxContainer/PanelContainer/VBoxContainer/BodyLabel" to="." method="_on_body_label_meta_clicked"]
[connection signal="meta_hover_ended" from="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer/HBoxContainer/PanelContainer/VBoxContainer/BodyLabel" to="." method="_on_body_label_meta_hover_ended"]
[connection signal="meta_hover_started" from="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/DefaultTextContainer/HBoxContainer/PanelContainer/VBoxContainer/BodyLabel" to="." method="_on_body_label_meta_hover_started"]
[connection signal="pressed" from="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/ControlsContainer/HistoryButton" to="." method="_on_history_button_pressed"]
[connection signal="pressed" from="LineReader/Camera2D/VNUICanvasLayer/VNUIRoot/VNUI/ControlsContainer/MenuButton" to="." method="_on_menu_button_pressed"]
